# mcp-wallet

./: .gitignore  Cargo.toml  INTENT.md  LICENSE  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs  server.rs
crates/mcp-server/src/protocol/: capabilities.rs  handler.rs  mod.rs  types.rs
crates/mcp-server/src/tools/: executor.rs  generator.rs  mod.rs
crates/mcp-server/src/transport/: http.rs  mod.rs  stdio.rs
crates/openapi-parser/: Cargo.toml
crates/openapi-parser/src/: auth.rs  error.rs  lib.rs  namespace.rs  operations.rs  parser.rs  resolver.rs  types.rs
crates/tauri-app/: Cargo.toml  tauri.conf.json
crates/tauri-app/capabilities/: default.json
crates/tauri-app/icons/: icon.icns
crates/tauri-app/src/: main.rs
crates/tauri-app/ui/: index.html  package-lock.json  package.json  tailwind.config.js
crates/tauri-app/ui/src/: App.tsx
crates/tauri-app/ui/src/components/: Layout.tsx
crates/tauri-app/ui/src/lib/: api.ts  catalog.ts  types.ts
crates/tauri-app/ui/src/pages/: Credentials.tsx  Dashboard.tsx  Integrations.tsx  ServerLogs.tsx  Settings.tsx  Unlock.tsx
crates/tauri-app/ui/src/styles/: globals.css
crates/wallet-core/: Cargo.toml
crates/wallet-core/src/: error.rs  lib.rs  session.rs  settings.rs  wallet.rs
crates/wallet-core/src/credential/: manager.rs  mod.rs  types.rs
crates/wallet-core/src/crypto/: encryption.rs  key_derivation.rs  mod.rs  secure_memory.rs
crates/wallet-core/src/integration/: mod.rs  registry.rs  types.rs
crates/wallet-core/src/storage/: encrypted_file.rs  keychain.rs  mod.rs  traits.rs
examples/: check_model_schema.rs  debug_full_flow.rs  debug_openai.rs  debug_request.rs  debug_responses_schema.rs  deep_schema_debug.rs  demo.rs  dump_operations.rs  mcp_protocol_test.rs  mcp_test.rs  test_all_specs.rs  test_openai_call.rs  test_persistence.rs  test_responses_api.rs  test_responses_execution.rs  trace_request.rs
