[workspace]
resolver = "2"
members = [
    "crates/wallet-core",
    "crates/openapi-parser",
    "crates/mcp-server",
    "crates/tauri-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Symbia Labs"]
repository = "https://github.com/symbia-labs/mcp-wallet"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Crypto
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
hex = "0.4"

# Security
zeroize = { version = "1", features = ["derive"] }
keyring = "2"

# Utilities
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
indexmap = { version = "2", features = ["serde"] }
directories = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
wallet-core = { path = "crates/wallet-core" }
openapi-parser = { path = "crates/openapi-parser" }
mcp-server = { path = "crates/mcp-server" }

# Root package for examples
[package]
name = "mcp-wallet-examples"
version.workspace = true
edition.workspace = true

[dependencies]
wallet-core.workspace = true
mcp-server.workspace = true
tokio.workspace = true
serde_json.workspace = true
tempfile = "3"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "mcp_test"
path = "examples/mcp_test.rs"
