[workspace]
resolver = "2"
members = [
    "crates/wallet-core",
    "crates/openapi-parser",
    "crates/mcp-server",
    "crates/tauri-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Symbia Labs"]
repository = "https://github.com/symbia-labs/mcp-wallet"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Crypto
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
hex = "0.4"

# Security
zeroize = { version = "1", features = ["derive"] }
keyring = "2"

# Utilities
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
indexmap = { version = "2", features = ["serde"] }
directories = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
wallet-core = { path = "crates/wallet-core" }
openapi-parser = { path = "crates/openapi-parser" }
mcp-server = { path = "crates/mcp-server" }

# Root package for examples
[package]
name = "mcp-wallet-examples"
version.workspace = true
edition.workspace = true

[dependencies]
wallet-core.workspace = true
mcp-server.workspace = true
openapi-parser.workspace = true
tokio.workspace = true
serde_json.workspace = true
tempfile = "3"
reqwest.workspace = true

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "mcp_test"
path = "examples/mcp_test.rs"

[[example]]
name = "debug_openai"
path = "examples/debug_openai.rs"

[[example]]
name = "test_all_specs"
path = "examples/test_all_specs.rs"

[[example]]
name = "test_openai_call"
path = "examples/test_openai_call.rs"

[[example]]
name = "debug_request"
path = "examples/debug_request.rs"

[[example]]
name = "dump_operations"
path = "examples/dump_operations.rs"

[[example]]
name = "debug_full_flow"
path = "examples/debug_full_flow.rs"

[[example]]
name = "mcp_protocol_test"
path = "examples/mcp_protocol_test.rs"

[[example]]
name = "check_model_schema"
path = "examples/check_model_schema.rs"

[[example]]
name = "trace_request"
path = "examples/trace_request.rs"

[[example]]
name = "test_persistence"
path = "examples/test_persistence.rs"

[[example]]
name = "test_responses_api"
path = "examples/test_responses_api.rs"

[[example]]
name = "debug_responses_schema"
path = "examples/debug_responses_schema.rs"

[[example]]
name = "deep_schema_debug"
path = "examples/deep_schema_debug.rs"

[[example]]
name = "test_responses_execution"
path = "examples/test_responses_execution.rs"
