[package]
name = "openapi-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "OpenAPI 3.x parser for MCP Wallet - extracts operations and generates namespace trees"

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# HTTP (for fetching specs)
reqwest.workspace = true

# Utilities
thiserror.workspace = true
url.workspace = true
indexmap.workspace = true
tracing.workspace = true
regex = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt-multi-thread"] }
